--- a/estilos.css
+++ b/estilos.css
@@ -7,8 +7,9 @@
 
 .menuprin{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    margin: 2rem;
 }
 
 .menuprin li{
